--- a/assets/css/css/style.css
+++ b/assets/css/css/style.css
@@ -1,1 +1,46 @@
 /* css */ 
+<!DOCTYPE <html>
+  <head>
+    <title> Mini Game's Tic Tac Toe & Snake. M2 Javascript</title>
+    /* <meta charset= "windown-1252>*/ 
+    <meta name="viewport contact="width-device, initial-scale=1.0">
+
+    <style>
+        *{box-sizing: border-box}
+
+        .container{width: 300px;
+                   overflow: hidden;
+                   margin: 50px auto 0 auto;
+                  }
+        .container span{width: 100%;
+                  display: block;
+                  text-align: center;
+                  font-family: sans-serif;
+                  color: #8086ED;
+                  background-color: #DBDBDC;
+                 }
+        .container .box:hover{background: rgba(10, 10, 10, 0.5);
+                              color: #ffffff;
+                            
+                }
+
+        button {background: #fc0e28;
+                  color: #ffffff;
+                  font-weight: bold;
+                  border: 1px solid yellowgreen;
+                  cursor: pointer;
+                  width: 200px;
+                  height: 40px;
+                  font-size: 22px;
+                  display: block;
+                  margin: 10px auto;
+               }
+
+    </style>
+</head>
+
+<body>
+
+</body>
+
+</html>
