--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
 
+        *{
+             margin: 0;
+             padding: 0;
+             border: 0;
+        }
 
+        body{
+             font-family: open-sans;
+             color: #000;
+        }
+/*
         .box-sizing {
              box-sizing: 140px; 
              box-align:center  border-box
           }
-
-        .h1 {
+*/
+         .h2 {
             font-family: sans-serif;
             text-align: center;
             font-size: medium;
             color: #000;
+        }
+        
+        #logo{
+             float: left;
+             font-size: 280%;
+             margin-left: 30px;
+        }
+        
+        #menu{
+             font-size: 110%;
+             list-style-type: none;
+             letter-spacing: 4px;
+        }
+
+        #logo, #menu {
+             line-height: 75px;
+        }
+
+        #menu li {
+             float: right;
+             margin-right: 30px;
+        }
+        
+        #menu a {
+             text-decoration: none;
+             color: inherit;
+        }
+
+        #menu a:hover{
+             border-bottom: 2px  solid #000;
+        }
+
+        .active{
+             border-bottom: 2px solid #000;
         }
 
         .container{width: 300px;
