--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
         body{
              font-family: open-sans;
-             color: #000;
+             color: #777777;
         }
 
         box-sizing {
@@ -16,15 +16,10 @@
           }
 
          h2 {
-            font-family: open-sans;
-            text-align: center;
-            font-size: medium;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 4px;
             color: #555555;
-        }
-        .navbar {
-             text-align: none;
-             font-style: italic;
-             float: left;
         }
         
         #logo{
