--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,18 @@
 
         body {
              font-family: open-sans;
-             color: #777777;
+             color: red;
         }
 
-        box-sizing {
-             box-sizing:  border-box
+        td {
+             height: 150px;
+             width: 130;
+             border: 3px black solid ;
+        }
+
+        #box {
+             size:  border-box;
+             color: #000;
           }
 
          h2 {
@@ -21,7 +28,7 @@
             letter-spacing: 4px;
             color: #555555;
         }
-        
+  /*----------------------- logo' & Menu-------------------------------*/      
         #logo {
              float: left;
              font-size: 280%;
@@ -39,7 +46,7 @@
         }
 
         #menu li {
-             float: right;
+             float: center;
              margin-right: 30px;
         }
 
@@ -93,13 +100,17 @@
 
         .win {
              background:#f9690e; color: #ffffff;
-          }      
+          }     
+
+/*------------------------------*/ 
 
 
 /*---------------------------  Footer  ---------------------------------------*/
          
         footer {
-             height: 150px;
+             height: 60px;
+             text-align: center;
+             position: fixed;
         }
 
         .social-networks {
@@ -107,7 +118,7 @@
         }
 
         .social-networks li {
-             display: inline;
+             display: inherit;
 
         }
 
@@ -129,7 +140,7 @@
         .footer-container-desktop ul {
              list-style: none;
              text-align: center;
-             margin-top: 30px;
+             margin-top: 10px;
         }
 
         .footer-container-desktop il {
