fixing the landing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
         body {
              font-family: open-sans;
              color: black;
-             background-color: cadetblue;
+             background-color: rgb(90, 151, 153);
         }
        
         
