added my free to ued images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,13 @@
              color: black;
              background-color: rgb(90, 151, 153);
         }
-       
+ /*------------------------ new tabloe --------------------------------*/      
         
 
         td {
              height: 150px;
-             width: 130;
-             border: 3px black solid ;
+             width: 130px;
+             border: 5px black solid ;
         }
 
         #box {
@@ -50,11 +50,11 @@
              float: center;
              margin-right: 30px;
         }
-        /*
+        
         #menu a {
              text-decoration: none;
              color: green;
-        } */
+        } 
         
 
         #menu a:hover {
