--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,9 @@
           }     
 
 /*------------------------------*/ 
+.rounder-pill{
 
+}
 
 /*---------------------------  Footer  ---------------------------------------*/
          
