--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,18 +12,28 @@
              background-color: rgb(90, 151, 153);
         }
  /*------------------------ new tabloe --------------------------------*/      
-        
-
-        td {
-             height: 150px;
-             width: 130px;
-             border: 5px black solid ;
+        .board {
+            margin: 20px auto;
         }
 
-        #box {
-             size:  border-box;
-             color: #000;
-          }
+        .board .box-row {
+            clear: both;
+            width: 200px;
+            height: 60px;
+            margin: 0 auto;
+        }
+
+        .board .box-row .box {
+            display: block;
+            height: 50px;
+            width: 50px;
+            background-color: #fff;
+            border: 1px solid #333;
+            margin: 5px;
+            float: left;
+            line-height: 50px;
+            text-align: center;
+        }
 
          h2 {
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -31,6 +41,24 @@
             letter-spacing: 4px;
             color: #555555;
         }
+
+        .clear {
+            clear: both;
+        }
+
+        .score {
+            clear: both;
+            margin: 20px auto;
+            width: 300px;
+            text-align: center;
+        }
+
+#turn {
+    margin: 20px auto;
+    font-weight: bold;
+    text-align: center;
+    font-size: 16px;
+}
   /*----------------------- logo' & Menu-------------------------------*/      
         #logo {
              float: left;
@@ -47,8 +75,7 @@
          
         
         #menu li {
-             float: center;
-             margin-right: 30px;
+            margin-right: 30px;
         }
         
         #menu a {
@@ -109,13 +136,13 @@
           }
 
         .win {
-             background:#f9690e; color: #ffffff;
-          }     
+             background-color: #f9690e !important; 
+             color: #ffffff !important;
+        }     
 
 /*------------- Contact/ TopWins -----------------*/ 
 .img-fluid{
-     place-content: top;
-     max-width: 100%;
+    max-width: 100%;
      height: auto;
      min-height: 10%;
      max-height: 50%;
@@ -144,28 +171,5 @@
              padding: 5%;
              color: #777777;
         }
-/*
-        .footer-container-desktop {
-             background-color: #dbdbdc;
-             color: #8086ed;
-             margin-top: 90px;
-             height: 150px;
-             float: inline-end;
-        }
-
-        .footer-container-desktop ul {
-             list-style: none;
-             text-align: center;
-             margin-top: 10px;
-        }
-
-        .footer-container-desktop il {
-             justify-content: center;
-             vertical-align: middle;
-             letter-spacing: 1px;
-             font-size: 21;
-        }
-
-
         
 
