--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@
              color: #ffffff !important;
         }     
 
-/*------------------------ Contact/ TopWins ---------------------------------*/ 
+/*------------------------ Contact  ---------------------------------*/ 
           .img-fluid {
               max-width: 100%;
               height: auto;
